fix(ECO-GH-502): file_list/file_component info-file-name doesn't break on long names

--- a/app/components/folio/file_list/file_component.sass
+++ b/app/components/folio/file_list/file_component.sass
@@ -78,6 +78,9 @@
   &__info-item
     overflow-wrap: break-word
 
+  &__info-file-name
+    line-break: anywhere
+
   &__info-file-name--interactive
     color: $accent-blue
     cursor: pointer
